02_project/crs/00-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: enterprise-agentgateway
spec:
  controllerName: solo.io/enterprise-agentgateway
  description: Specialized class for agentgateway.
  parametersRef:
    group: enterpriseagentgateway.solo.io
    kind: EnterpriseAgentgatewayParameters
    name: agentgateway-params
    namespace: agentgateway-system
