02_project/crs/ent-databricks-all-crs-working.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: databricks-statements-openapi-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agentgateway
  rules:
  - backendRefs:
    - group: enterpriseagentgateway.solo.io
      kind: EnterpriseAgentgatewayBackend
      name: ent-databricks-statements-openapi-backend
    matches:
    - path:
        type: PathPrefix
        value: /databricks/statements/openapi/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-protected-resource/databricks/statements/openapi/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-authorization-server/databricks/statements/openapi/mcp
