02_project/crs/ent-petstore-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  name: petstore-openapi-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: agentgateway
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: petstore-openapi-backend
          weight: 1
      matches:
        - path:
            type: Exact
            value: /petstore/openapi/mcp
