02_project/crs/ent-snowflake-all-crs-working.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snowflake-openapi-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agentgateway
  rules:
  - backendRefs:
    - group: enterpriseagentgateway.solo.io
      kind: EnterpriseAgentgatewayBackend
      name: ent-snowflake-openapi-backend
    matches:
    - path:
        type: PathPrefix
        value: /snowflake/openapi/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-protected-resource/snowflake/openapi/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-authorization-server/snowflake/openapi/mcp
